[gd_scene load_steps=17 format=2]

[ext_resource path="res://Sprites/Home/BackEnd.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Men2D.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sprites/HP/StickBarricade.png" type="Texture" id=3]
[ext_resource path="res://Sprites/HP/HPBarricade.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Home_with_door.gd" type="Script" id=5]
[ext_resource path="res://Sprites/Home/home.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Home/curb.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 330.983, 177.231 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 221.389, 104.279 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 51.4181, 6.59637 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 194.561, 6.96829 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 342.592, 115.299 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 8.28699, 303.29 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 10.421, 303.322 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 194.461, 95.8249 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 365.58, 308.242 )

[node name="Barr" instance=ExtResource( 2 )]
script = ExtResource( 5 )

[node name="HP_bar" parent="." index="0"]
visible = false
margin_left = -75.0
margin_top = -175.0
margin_right = 77.9999
margin_bottom = -114.0
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 3 )

[node name="HitBox" parent="." index="1"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox" index="0"]
visible = false
position = Vector2( -14.1601, 174.744 )
shape = SubResource( 1 )

[node name="BiteArea" type="Area2D" parent="." index="2"]
scale = Vector2( 1.50926, 1.67857 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BiteArea" index="0"]
position = Vector2( -10.3597, 105.554 )
shape = SubResource( 2 )

[node name="Sprite2" type="Sprite" parent="." index="3"]
scale = Vector2( 2, 2 )
z_index = -2
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="4"]
scale = Vector2( 2, 2 )
z_index = 2
texture = ExtResource( 6 )

[node name="StaticBody2D" type="StaticBody2D" parent="." index="5"]
z_index = 3

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D" index="0"]
position = Vector2( 275.582, 362.596 )
shape = SubResource( 3 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D" index="1"]
position = Vector2( -165.561, 363.054 )
shape = SubResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D" index="2"]
position = Vector2( -17.592, -122.299 )
shape = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D" index="3"]
position = Vector2( 325.492, 65.8432 )
shape = SubResource( 6 )

[node name="Coll_Alive" type="CollisionShape2D" parent="StaticBody2D" index="4"]
position = Vector2( -356.609, 66.7195 )
shape = SubResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="6"]
position = Vector2( -7.07104, -114.551 )
shape = SubResource( 8 )

[node name="Sprite3" type="Sprite" parent="." index="7"]
scale = Vector2( 2, 2 )
z_index = -1
texture = ExtResource( 7 )

[node name="Area2D" type="Area2D" parent="." index="8"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]
position = Vector2( -15.0416, 63.8233 )
shape = SubResource( 9 )

[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="area_entered" from="BiteArea" to="." method="_on_BiteArea_area_entered"]
[connection signal="area_exited" from="BiteArea" to="." method="_on_BiteArea_area_exited"]
